# genesis_gemini_mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  USAGE_GUIDE.md  genesis_client.py  genesis_server.py  genesis_templates.py  main.py  pyproject.toml  requirements-dev.txt  run_tests.sh  server.py  setup.bat  setup.py  setup.sh  simple_server.py  start.sh  start_vnc.py
docs/: NATURAL_LANGUAGE_USAGE.md
examples/: genesis_example.py  mcp_client.py  stdio_client.py
src/genesis_mcp/: __init__.py  models.py  server.py
src/genesis_mcp/models/: __init__.py
src/genesis_mcp/services/: __init__.py  gemini_service.py  simulation.py  simulation_clean.py  simulation_new.py  simulation_old_backup.py
src/genesis_mcp/utils/: __init__.py
tests/: integration_test.py  test_server.py  test_services.py  test_simulation_service.py
