[project]
name = "genesis-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Genesis World simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.7.2",              # Compatible with both mcp and genesis in practice
    "mcp[cli]==1.4.1",              # MCP with CLI tools
    "fastapi==0.115.0",             # Specific version for compatibility
    "uvicorn==0.34.0",              # For serving the FastAPI app
    "requests==2.32.0",             # For HTTP requests
    "httpx==0.28.0",                # Used by MCP for HTTP
    "starlette>=0.37.2,<0.39.0",            # Required by FastAPI
    "typing-extensions==4.12.0",    # Required by several packages
    # genesis==0.2.1 requires pydantic==2.7.1 but we install it with --no-deps
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "src"]

[tool.setuptools]
packages = { find = { where = ["src"] } }
