[project]
name = "genesis-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Genesis World simulations with stdio transport"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.7.1", # Compatible with genesis-world
    "typing-extensions==4.12.0", # Genesis World simulator
    # mcp==1.4.1 will be installed manually with CLI support
    "trimesh>=4.6.5", # Required for Genesis World visualizations
    "pillow>=10.0.0", # Required for visualizations
    "shapely>=2.0.0", # Required for visualizations
    "anyio>=4.9.0",
    "httpx>=0.28.1",
    "genesis-world>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "src"]

[tool.setuptools]
packages = { find = { where = ["src"] } }
